--- a/index.html
+++ b/index.html
@@ -1,12 +1,163 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+	<meta charset="utf-8">
+	<title>Basic Tablesorter Demo</title>
+	<script src="js/jquery-2.1.1.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
+	<script type="text/javascript" charset="utf8"
+		src="DataTables-1.10.18/js/jquery.dataTables.js"></script>
+
+
 </head>
+
 <body>
-    欢迎访问
+	<div class="demo">
+		<h1><a href="https://github.com/Mottie/tablesorter">需求<em>任务</em></a></h1>
+		<!-- <p><a href="https://github.com/Mottie/">新增需求</a>&nbsp;&nbsp;
+			<a href="docs/index.html">新增人员</a>
+		</p> -->
+
+		<table class="tablesorter" id="myTable">
+			<thead>
+				<tr align="left">
+					<th>需求号</th>
+					<th>需求描述</th>
+					<th>开发人员</th>
+					<th>状态</th>
+					<th>任务类型</th>
+					<th>分配日期</th>
+					<th>分配者</th>
+
+				</tr>
+			</thead>
+			<tbody id="demand-table">
+				<!-- <tr><td>abc 123</td><td>&#163;10,40</td><td>Koala</td><td>http://www.google.com</td></tr> -->
+
+			</tbody>
+		</table>
+		推荐全页面搜索 轻点选中
+		<button id="addUser" style="background-color: green;color: white">新增人员</button>
+		<button id="addDemand" style="background-color: green;color: white">新增需求</button>
+		<button id="assign" style="background-color:green;color: white">分配</button>
+		<button id="cancelassign" style="background-color: green;color: white">取消分配</button>
+		<button id="complete" style="background-color: green;color: white">完成</button>
+		<button id="delete" style="background-color:red;color: white">删除</button>
+
+
+
+
+
+	</div>
+
+	<script>
+
+		var datas = new Array();
+		$(document).ready(function () {
+			$('#addUser').click(function () {
+				window.location.href = "adduser.html";
+			});
+			// 数据请求
+			$.ajax({
+				url: "http://localhost:8010/all",
+				// url:"http://localhost:8010/loan/loans",
+				type: 'GET',
+				success: function (responsedata) {
+					if (responsedata.message == "success") {
+						datas = responsedata.data;
+						console.log(datas);
+						$('#myTable').DataTable({
+							data: datas
+						});
+						addSelectEvent();
+						deleteDemand();
+
+						// for (var i = 0; i < datas.length; i++) {
+						// 	loadTable(datas[i]);
+						// }
+					}
+				},
+				error: function (data) {
+					alert("错误");
+				},
+			});
+		});
+		function loadTable(demandView) {
+			// 			//需求号
+			var iddemand = demandView.iddemand;
+			//     //需求描述
+			var topic = demandView.topic;
+			//     //需求状态
+			var state = demandView.state;
+			//     //开发者账户
+			var developer = demandView.developer;
+			//     // 分配者
+			var assigner = demandView.assigner;
+			// //    分配日期
+			var date = demandView.date;
+			// //需求状态
+			var type = demandView.type;
+			//     //开发者姓名
+			var developerName = demandView.developerName;
+
+			const tdHead = "<td>";
+			const tdTail = "</td>";
+			const trHead = "<tr>";
+			const trTail = "</tr>";
+			var element = trHead + tdHead + iddemand + tdTail
+				+ tdHead + topic + tdTail
+				+ tdHead + developerName + tdTail
+				+ tdHead + state + tdTail
+				+ tdHead + type + tdTail
+				+ tdHead + date + tdTail
+				+ tdHead + assigner + tdTail
+				+ tdHead + '操作' + tdTail;
+			$("#demand-table").append(element);
+			loadTableData();
+		}
+		function loadTableData() {
+
+
+		}
+		function addSelectEvent() {
+			var table = $('#myTable').DataTable();
+
+			$('#myTable tbody').on('click', 'tr', function () {
+				if ($(this).hasClass('selected')) {
+					$(this).removeClass('selected');
+				}
+				else {
+					table.$('tr.selected').removeClass('selected');
+					$(this).addClass('selected');
+				}
+			});
+
+		}
+		function deleteDemand() {
+			
+			$('#delete').click(function () {
+				var table = $('#myTable').DataTable();
+				var row = table.row('.selected').data();
+				$.ajax({
+				url: "http://localhost:8010/delete",
+				// url:"http://localhost:8010/loan/loans",
+				data:{"iddemand":row[0]},
+				type: 'POST',
+				success: function (responsedata) {
+					console.log(responsedata);
+					console.log(row[0]);
+					table.row('.selected').remove().draw(false);
+				},
+				error: function (data) {
+					alert("服务器错误");
+				},
+				});
+		});
+		}
+
+
+	</script>
 </body>
+
 </html>
