--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<script src="js/jquery-2.1.1.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
 	<script type="text/javascript" charset="utf8"
-		src="DataTables-1.10.18/js/jquery.dataTables.js"></script>
+		src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
 
 
 </head>
