修改下拉框选项

--- a/adddemand.html
+++ b/adddemand.html
@@ -84,10 +84,10 @@
       </div>
       <div class="col-sm-7 col-end">
         <select id="type" name="type">
-          <option value="0">寿险核心</option>
-          <option value="1">核心打印平台</option>
-          <option value="2">电子打印平台</option>
-          <option value="3">银保通打印</option>
+          <option value="0">后台接口</option>
+          <option value="1">前端页面</option>
+          <option value="2">前端JS</option>
+          <option value="3">数据库</option>
         </select>
       </div>
     </div>
